[package]
name = "mandelbrot_bevy"
version = "0.1.0"
edition = "2021"
authors = ["Jack Kingham <wowknead@gmail.com>"]
description = "Interactive render of the mandelbrot set."
repository = "https://github.com/wowjack/mandelbrot_bevy"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"